add Cronitor integration

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,8 @@
 DB_HOST=localhost
 DB_NAME=my_database
-DB_USER=username
-DB_PASSWORD=mypassword
+DB_USER=my_username
+DB_PASSWORD=my_password
 CRON_PERIOD='0 0 * * 1'
+KEEP_LOG_FILE=true
+CRONITOR_API_KEY=your_api_key
+CRONITOR_MONITOR_KEY=your_monitor_key
