--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "async": "^3.2.1",
+    "aws-sdk": "^2.1004.0",
     "cronitor": "^2.2.3",
     "dotenv": "^10.0.0",
     "moment": "^2.29.1",
